--- a/themes/mytheme/templates/base.html
+++ b/themes/mytheme/templates/base.html
@@ -10,7 +10,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img class="brand-avatar" src="{{ SITEURL }}/images/avatar.svg" alt="{{ AUTHOR }}">
+        <img class="brand-avatar" src="{{ SITEURL }}/images/brand_image.png" alt="{{ AUTHOR }}">
         <div class="brand-meta">
           <a href="{{ SITEURL or '/' }}" class="brand-link">{{ SITENAME }}</a>
           <p class="site-desc">{{ SITE_DESCRIPTION }}</p>
