--- a/themes/mytheme/templates/base.html
+++ b/themes/mytheme/templates/base.html
@@ -11,7 +11,7 @@
     <div class="container header-inner">
       <div class="brand">
         <a href="{{ SITEURL or '/' }}" class="brand-clickable">
-          <img class="brand-avatar" src="{{ SITEURL }}/images/brand_image.png" alt="{{ AUTHOR }}">
+          <img class="brand-avatar" src="{{ SITEURL }}/images/blog_logo.png" alt="{{ AUTHOR }}">
           <div class="brand-meta">
             <p class="brand-link">{{ SITENAME }}</p> 
             <p class="site-desc">{{ SITE_DESCRIPTION }}</p>
