--- a/themes/mytheme/templates/article.html
+++ b/themes/mytheme/templates/article.html
@@ -16,6 +16,13 @@
             </div>
         </header>
 
+        {# NEW: Only shows if you define 'Cover: ...' in markdown #}
+        {% if article.metadata.get('cover') %}
+        <figure class="article-cover">
+            <img src="{{ SITEURL }}/{{ article.metadata.get('cover') }}" alt="{{ article.title }}">
+        </figure>
+        {% endif %}
+
         <div class="article-content">
             {{ article.content }}
         </div>
