--- a/themes/mytheme/templates/index.html
+++ b/themes/mytheme/templates/index.html
@@ -6,9 +6,18 @@
     <div class="hero-inner">
       <div class="hero-media">
         <img src="/images/hero-graphic.jpg" alt="hero graphic" class="hero-graphic">
+        
         <div class="hero-content">
-          <h1 class="hero-title">{{ SITENAME }}</h1>
-          <p class="hero-sub">{{ SITE_DESCRIPTION }}</p>
+          
+          <h1 class="hero-title">
+            Building, Breaking,<br>
+            and Learning.
+          </h1>
+          
+          <p class="hero-sub">
+            From social science to data engineering. I started this blog to keep track of my progress. A journal for technical notes, career growth, and reflecting on how to build better software systems.
+          </p>
+          
           <p class="hero-cta">
             <a class="btn" href="{{ SITEURL }}/blog.html">Read the blog</a>
             <a class="btn btn-ghost" href="{{ SITEURL }}/projects.html">See projects</a>
