--- a/themes/mytheme/templates/article.html
+++ b/themes/mytheme/templates/article.html
@@ -32,7 +32,8 @@
             <p class="tag-list">
                 <strong>Tags:</strong>
                 {% for tag in article.tags %}
-                <a href="{{ SITEURL }}/{{ tag.url }}" class="tag-badge">{{ tag }}</a>
+                {# CHANGE: Point to blog.html with a query parameter #}
+                <a href="{{ SITEURL }}/blog.html?tag={{ tag }}" class="tag-badge">{{ tag }}</a>
                 {% endfor %}
             </p>
             {% endif %}
