--- a/themes/mytheme/templates/page.html
+++ b/themes/mytheme/templates/page.html
@@ -36,7 +36,7 @@
     </div>
     <div class="about-bio">
       <h1 class="about-title">Hi, I'm {{ AUTHOR }}.</h1>
-      <p class="about-subtitle">Data Enthusiast & Self-Taught Developer</p>
+      <p class="about-subtitle">Data Engineer. Builder. Curious Mind</p>
       <div class="about-prose">
         {{ page.content }}
       </div>
